# Krisha-AI

./: .gitignore  .pre-commit-config.yaml  .repomixignore  README.md  app.py  main.py  pyproject.toml  repomix.config.json  requirements.txt
datasets/: snapshot.json  synthetic_rag_data.json
evaluation/: data_loader.py  metrics.py  models.py  result_benchmark.txt  runner.py
public/: custom.css
src/config/: cache.py  settings.py
src/interfaces/cli/: console.py
src/interfaces/web/: chat.py
src/models/: __init__.py  advert.py  search.py
src/services/: api_client.py  llm_service.py  reranker.py  scraper.py  vector_store.py
src/utils/: logger.py  mappings.py  text_processing.py
